--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,9 @@
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>magic-duels-deck-exporter</artifactId>
     <version>1.0</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
