--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>magic-duels-deck-exporter</artifactId>
-    <version>1.0</version>
+    <version>3.1-beta</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -30,6 +30,12 @@
             <groupId>com.shazam</groupId>
             <artifactId>shazamcrest</artifactId>
             <version>0.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
